# satori

./: .gitignore  CHANGELOG.md  Gopkg.toml  NOTICE  README.md  TODO  glide.yaml  go.mod  go.sum  missing-docs
agent/: cfg.example.json  cfg.example.yaml  glide.yaml  main.go
alarm/: Pipfile  bitbar-plugin.py  buildout.cfg  pyproject.toml  setup.py
alarm/config/: config-example.yaml
alarm/docker/: use-china-mirror
alarm/src/: backend.py  config.py  entry.py  hook.py  main.py  restapi.py  save.py  state.py  utils.py
alarm/src/backend/: __init__.py  bearychat.py  common.py  debug.py  nexmo_tts.py  noop.py  onealert.py  opsgenie.py  pagerduty.py  smtp.py  telegram.py  victorops.py  wechat_qy.py  yunpian_sms.py  zulip.py
alarm/src/tools/: dump_dfa.py  inject.py
alarm/tests/: base.py  config.yaml  example_data.py  test_backend.py  test_main.py
alarm/tests/rules-example/alarm/: backends  hooks  main.yaml  other.yaml  strategy.yaml  th11.yaml
deploy/: rules-repo-pre-receive-hook
doc/: 00-overview.md  01-add-rule.md  02-config-alarm.md  03-add-plugin.md  04-faq.md  99-manual-deploy.md  Makefile  conf.py  index.rst
frontend/: events.html  frontend-vars.js  index.html  nodes.html  package.json
master/: cfg.example.json  glide.yaml  main.go
misc/: rules-repo-pre-receive-hook
riemann-reloader/: glide.yaml  main.go
rules/: README  agent_plugin.clj  alarm.clj  riemann.config
satori/: install
satori-rules/: agent-update.yaml  authorized_keys  authorized_keys.yaml  sign
swcollector/: ChangeLog.md  README.md  cfg.example.json  main.go
transfer/: main.go  (+4 more)
(+284 files in other folders)
